fix some table spacing issues

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -42,7 +42,6 @@
   position:fixed;
   top:59px;
   width:100%;
-  z-index: 100000000000000000;
 }
 
 .pagewithbar {
@@ -249,8 +248,4 @@
 
 .button-standard:hover{
  background-color:rgb(205, 220, 232);
-}
-
-.burger{
-  z-index:10000000000000000000
 }
